Updates from Overleaf

--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -77,9 +77,9 @@ In Figure 1 we illustrate the similarity and difference between the 7-day moving
 
 \begin{figure}
     \centering
-    \includegraphics{../plots/}
+    \includegraphics[height=0.8\textwidth,keepaspectratio]{../plots/latest_prediction}
     \caption{Caption}
-    \label{fig:my_label}
+    \label{fig:latest_prediction}
 \end{figure}
 
 % TODO: FIGURE 1 HERE
