Updates from Overleaf

--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -77,7 +77,7 @@ In Figure 1 we illustrate the similarity and difference between the 7-day moving
 
 \begin{figure}
     \centering
-    \includegraphics[height=0.8\textwidth,keepaspectratio]{../plots/latest_prediction}
+    \includegraphics[width=\textwidth]{../plots/latest_prediction}
     \caption{Caption}
     \label{fig:latest_prediction}
 \end{figure}
